Release Highlights
==================

Version 3.0.0 (unreleased):
---------------------------
 * Supports Qt6 in addition to Qt5
 * The qmake buildsystem (via autogen.py) is removed.
 * Requires C++11
 * The Python bindings installation path for "site-packages"

Version 2.8.0 (unreleased):
---------------------------
 * Support for Qt4 is removed
 * The qmake buildsystem is deprecated and will be removed in version 3.0
 * CMake buildsystem - increase min version to 3.1.0
 * CMake buildsystem - fix library versioning for RelWithDebInfo on Windows
 * Python bindings fixed for new PySide2 version

Version 2.7.2:
--------------
** WARNING ** Version 2.7.2 was the final release with Qt4 support **
 * CMake buildsystem - option BUILD_PYTHON_BINDINGS => KDChart_PYTHON_BINDINGS
 * CMake buildsystem - option PYTHON_BINDINGS_INSTALL_PREFIX => KDChart_PYTHON_BINDINGS_INSTALL_PREFIX
 * Fix static linking examples and unittests in the CMake buildsystem
 * small buildsystem improvements

Version 2.7.1:
--------------
 * CMake buildsystem - installs library pdb files with MSVC builds
 * CMake buildsystem - generates .pri files for qmake users
 * CMake buildsystem - option DISABLE_PYTHON_BINDINGS => BUILD_PYTHON_BINDINGS
 * CMake buildsystem - option PYTHON_BINDINGS_INSTALL_DIR =>
                       PYTHON_BINDINGS_INSTALL_PREFIX (default=CMAKE_INSTALL_PREFIX)
 * Fix build for Qt5.15
 * Fix build against a namespaced Qt

Version 2.7.0:
--------------
 * New CMake-based build system (optional)
 * Add support for spline-based line smoothing
 * New Python3 bindings for KDGantt (CMake buildsystem only. see INSTALL-bindings.txt)
 * New installing file for Conan (WIP - see conan folder)

Version 2.6.2:
--------------
 * Update version number for OBS

Version 2.6.1:
--------------
 * Keep it building with modern Qt versions, at least up to Qt5.10
 * Improve tooltip handling
 * Fix horizontal bar chart
 * Use @rpath for OSX dynamic libraries
 * Fix build on Qt4/ARM

Version 2.6.0: