@@ -7,6 +7,7 @@ Version 3.0.0 (unreleased):
  * The qmake buildsystem (via autogen.py) is removed.
  * Requires C++11
  * The Python bindings installation path for "site-packages"
+ * buildsystem - add an 'uninstall' target
 
 Version 2.8.0 (unreleased):
 ---------------------------
